[gd_scene load_steps=15 format=4 uid="uid://chacbj2q6jcmg"]

[ext_resource type="Script" path="res://Radio/radiooo.gd" id="1_hs2vg"]
[ext_resource type="Script" path="res://Radio/camera_3d.gd" id="2_oih0w"]
[ext_resource type="AudioStream" uid="uid://b4tgh733fxn0h" path="res://Radio/edm-static-240838.mp3" id="3_gpaep"]
[ext_resource type="AudioStream" uid="uid://c66e8ubfvjyve" path="res://Radio/float-void-144817.mp3" id="4_pkw88"]
[ext_resource type="Texture2D" uid="uid://bhqewc124qxmp" path="res://Extern/Abandoned_House/Abandoned_House_Tele1.jpg" id="4_vwjea"]
[ext_resource type="AudioStream" uid="uid://cmscfg5nt2lh2" path="res://Radio/ode-to-joy-piano-68697.mp3" id="5_md1ok"]
[ext_resource type="Texture2D" uid="uid://d4cvdnvicq4d7" path="res://Extern/Abandoned_House/Abandoned_House_Piso_cocina.jpg" id="6_1c028"]
[ext_resource type="AudioStream" uid="uid://b5t2wl86kf27k" path="res://Radio/red-and-blue-145386.mp3" id="6_2rr4k"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_whav6"]
albedo_texture = ExtResource("6_1c028")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ipl5k"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_isctp"]
albedo_texture = ExtResource("4_vwjea")

[sub_resource type="ArrayMesh" id="ArrayMesh_85lgg"]
_surfaces = [{
"aabb": AABB(-0.0690817, 1.90549e-05, -0.246433, 0.141931, 0.404939, 0.462818),
"format": 34359742465,
"index_count": 96,
"index_data": PackedByteArray("AAABAAIAAwAEAAEABQACAAQABQAEAAYABgADAAAABQAGAAIABwAIAAkACQAKAAcACwAHAAoACgAMAAsADQALAAwADAAOAA0ADwAQAA0ADQAOAA8ADQAHAAsADQAIAAcAEAARAAgADQAQAAgAEgARABAAEAAPABIACQAIABEAEQASAAkADAAJABIADAAKAAkADgAMABIADgASAA8AAQATAAIABAATAAEAAgATAAQABAADAAYAAwABAAAABgAAAAIA"),
"name": "Atlas 3",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("+DGVPaaMgT79WHy++DGVPaeMgT4ElF0+snqNvaaMgT79WHy++DGVPRVjoDcFlF0+snqNvRVjoDcFlF0+snqNvQzYnzf8WHy++DGVPQzYnzf8WHy+ZjImu6ZWzz4DFVA+lC1ou6ZWzz6jfE8+lC1ou8AdgD6kUU0+Wgs4usAdgD7E/04+ZjImu6ZWzz7DRVE+Wgs4usAdgD5kW1I+lC1ou6ZWzz4j3lE+lC1ou8AdgD6ECVQ+LCzRu8AdgD5kW1I+YxSVu6ZWzz7DRVE+YxSVu6ZWzz4DFVA+LCzRu8AdgD7E/04+snqNvaeMgT4ElF0+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_r2yfk"]
resource_name = "Cube_006"
_surfaces = [{
"aabb": AABB(-0.0690817, 1.90549e-05, -0.246433, 0.141931, 0.404939, 0.462818),
"attribute_data": PackedByteArray("yFB3PkLNtT7IUHc+cKh4Pm0htT5CzbU+tF4EPkLNtT4IZYs8Qs21PrReBD5wqHg+CGWLPHCoeD4IZYs8XLYFPrReBD5wqHg+tF4EPkLNtT7KUHc+Qs21PsdQdz5ctgU+x1B3PnSoeD6zXgQ+YLYFPrReBD5ctgU+CGWLPFy2BT60XgQ+QCKWPGl6lz6Mmho+MbOYPoyaGj4N0Jk+cFF1Poldlj5wUXU+A96WPsCYGj5FpJQ+ZEx1PjeYnz6Mmho+mzSgPsCYGj5bbqI+ZEx1Phm1oD5wUXU+lUKdPnBRdT5tX54+jJoaPjt9oz7oeHE+HYykPjRzcD4djKQ+rCFxPjt9oz74G3A+W26iPqwhcT5bbqI+NHNwPlGJmz5kTHU+CcOdPsCYGj6VT5k+wJgaPltuoj4Ib3I+7WaoPghvcj7tZqg+UFt0PqVqpT7oeHE+W26iPlBbdD6laqU+cFF1Pm0htT5wqHg+CGWLPHCoeD60XgQ+XLYFPshQdz5wqHg+s14EPnSoeD4IZYs8QCKWPA=="),
"format": 34359742487,
"index_count": 96,
"index_data": PackedByteArray("AAABAAIAAwAEAAUABgAHAAgACQAIAAoACwAMAA0ADgAPABAAEQASABMAEwAUABEAFQARABQAFAAWABUAFwAYABkAGQAaABcAGwAcABcAFwAaABsAHQAeAB8AHQAgAB4AIQAiACAAHQAhACAAIwAkABwAHAAbACMAEwASACUAJQAjABMAJgAnACgAJgApACcAKgAmACgAKgAoACsAAQAsAAIABAAtAAUABwAuAAgACAAvAAoADAAwAA0ADwAxABAA"),
"name": "Atlas 3",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 50,
"vertex_data": PackedByteArray("+DGVPaaMgT79WHy++DGVPaeMgT4ElF0+snqNvaaMgT79WHy++DGVPRVjoDcFlF0+snqNvRVjoDcFlF0++DGVPaeMgT4ElF0+snqNvQzYnzf8WHy+snqNvaaMgT79WHy+snqNvRVjoDcFlF0+snqNvQzYnzf8WHy++DGVPQzYnzf8WHy++DGVPQzYnzf8WHy++DGVPRVjoDcFlF0++DGVPaaMgT79WHy+snqNvQzYnzf8WHy++DGVPQzYnzf8WHy+snqNvaaMgT79WHy+ZjImu6ZWzz4DFVA+lC1ou6ZWzz6jfE8+lC1ou8AdgD6kUU0+Wgs4usAdgD7E/04+ZjImu6ZWzz7DRVE+Wgs4usAdgD5kW1I+lC1ou6ZWzz4j3lE+ZjImu6ZWzz7DRVE+Wgs4usAdgD5kW1I+lC1ou8AdgD6ECVQ+LCzRu8AdgD5kW1I+YxSVu6ZWzz7DRVE+lC1ou6ZWzz4j3lE+ZjImu6ZWzz4DFVA+ZjImu6ZWzz7DRVE+lC1ou6ZWzz6jfE8+YxSVu6ZWzz7DRVE+YxSVu6ZWzz4DFVA+LCzRu8AdgD7E/04+YxSVu6ZWzz4DFVA+YxSVu6ZWzz4DFVA+Wgs4usAdgD5kW1I+lC1ou8AdgD6kUU0+LCzRu8AdgD7E/04+Wgs4usAdgD7E/04+lC1ou8AdgD6ECVQ+LCzRu8AdgD5kW1I+snqNvaeMgT4ElF0+snqNvaeMgT4ElF0+snqNvaeMgT4ElF0++DGVPRVjoDcFlF0++DGVPaeMgT4ElF0++DGVPaaMgT79WHy+VNVU1f8f/9+qqqqq/z//z6oqVNX/P/+vqqpVVf/f/99UVVVV/7//r6qqqqr/3/+fqiqqKv9f/6+qKlTV/1//z1RVVVX/v/+vqiqqKv/f/59U1aoq/7//z1TVqir/X/+fqqpVVf8//49U1VTV/7//j6oqqir/P//PVNWqKv8f/5+qKlTV/z//r3fRWMxQAIro5cf//2wAnr+/yAAAvQDJv0HSJzRPALfoprOHrpXoi/MmtEJSz+kxjf9/Gbg+/8m/prOHrsrqmJkmtEJSw+um5v9/v0iT/6C/2EtCUo6uJ8BYTIeu6K4nwP9/Gbj///+/d9FYzNy3BKqms4euCNTum+XH//////+/WEyHrty3+tWHLljMCNQQ5L0tJzROTR3Khy5YzBdntMuHLljMzUxltSa0QlKvM4KBv8gAAEQrD+a9LSc0rzN7/kHSJzQBAGuX/3+/SEQr7pnYS0JSAACS6FVVqqr/H/+fVVWqqv+//89VVaqq/5//r6qqVVX/3//fqqqqqv+f/59U1VTV/x//3w==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_85lgg")

[sub_resource type="BoxShape3D" id="BoxShape3D_u6ejy"]

[node name="Radiooo" type="Node3D"]
script = ExtResource("1_hs2vg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.00121684, -0.0871472, 0.996195, -0.0139091, 0.996098, 0.0871557, -0.999903, -0.0139622, -4.726e-08, 0.659634, 1.0676, -0.661641)
top_level = true
script = ExtResource("2_oih0w")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_gpaep")
autoplay = true

[node name="Audio1" type="AudioStreamPlayer3D" parent="AudioStreamPlayer3D"]
stream = ExtResource("4_pkw88")

[node name="Audio2" type="AudioStreamPlayer3D" parent="AudioStreamPlayer3D"]
stream = ExtResource("5_md1ok")

[node name="Audio3" type="AudioStreamPlayer3D" parent="AudioStreamPlayer3D"]
stream = ExtResource("6_2rr4k")

[node name="Knob3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(-5.24537e-09, 0.0276934, 0, -0.12, -1.21052e-09, 0, 0, 0, 0.103, 0.132098, 0.96189, -0.633982)
material_override = SubResource("StandardMaterial3D_whav6")

[node name="Middle" type="Marker3D" parent="Knob3D"]
transform = Transform3D(1, 8.88178e-16, 0, 1.42109e-14, 1, 0, 0, 0, 1, 0, 1.01847, 0)

[node name="KnobAngle" type="Marker3D" parent="Knob3D/Middle"]
transform = Transform3D(1, 0, 0, 2.84217e-14, 1, 0, 0, 0, 1, -0.494428, 0, 0)

[node name="Reference" type="Marker3D" parent="Knob3D"]
transform = Transform3D(1, 1.77636e-15, 0, 4.26326e-14, 1, 0, 0, 0, 1, -0.578671, -0.592429, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="Knob3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Knob3D/StaticBody3D"]
shape = SubResource("CylinderShape3D_ipl5k")

[node name="Radio" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 7.54979e-08, 0, -7.54979e-08, 1, 0.0420766, 0.827151, -0.696769)
material_override = SubResource("StandardMaterial3D_isctp")
mesh = SubResource("ArrayMesh_r2yfk")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Radio"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Radio/StaticBody3D"]
shape = SubResource("BoxShape3D_u6ejy")

[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
